# Vita_plex

./: .gitignore  .gitmodules  CMakeLists.txt  MISSING_API_FEATURES.md  PLAN_suwayomi_features.md  README.md  SWITCH_BACKGROUND_AUDIO_PLAN.md  VERSION  openapi.json  psp2core-1772312516-0x0028763eaf-eboot.bin.psp2dmp.tmp  psp2core-1772313549-0x002ad13a49-eboot.bin.psp2dmp.tmp  psp2core-1772314510-0x0021693d63-eboot.bin.psp2dmp  psp2core-1772315872-0x002b373bbd-eboot.bin.psp2dmp  psp2core-1772317312-0x0029bf3e97-eboot.bin.psp2dmp.tmp  psp2core-1772318595-0x002b9434b5-eboot.bin.psp2dmp.tmp  psp2core-1772334796-0x002c1e36b9-eboot.bin.psp2dmp.tmp  psp2core-1772336818-0x00212132c3-eboot.bin.psp2dmp  psp2core-1772339324-0x002bf12c83-eboot.bin.psp2dmp  psp2core-1772340148-0x002dcb2c9f-eboot.bin.psp2dmp  psp2core-1772385975-0x002aa72787-eboot.bin.psp2dmp.tmp  psp2core-1772387078-0x0029ec3c6d-eboot.bin.psp2dmp.tmp  psp2core-1772388575-0x0023be30dd-eboot.bin.psp2dmp.tmp  psp2core-1772391945-0x00301f30f9-eboot.bin.psp2dmp.tmp  psp2core-1772393976-0x002ba53ae5-eboot.bin.psp2dmp.tmp  psp2core-1772396137-0x002cf63429-eboot.bin.psp2dmp.tmp  psp2core-1772398313-0x002ac42f63-eboot.bin.psp2dmp.tmp  psp2core-1772833787-0x0031f6370f-eboot.bin.psp2dmp.tmp  psp2core-1772835467-0x0003dc4e9f-eboot.bin.psp2dmp.tmp  psp2core-1772836855-0x0034bc3839-eboot.bin.psp2dmp.tmp  psp2core-1772857761-0x0004004a17-eboot.bin.psp2dmp  psp2core-1772859497-0x0004024bd3-eboot.bin.psp2dmp.tmp  psp2core-1772862874-0x00325f39d3-eboot.bin.psp2dmp  psp2core-1772863951-0x002bf43c15-eboot.bin.psp2dmp.tmp  psp2core-1772909536-0x0004ec4327-eboot.bin.psp2dmp.tmp  psp2core-1772911334-0x002e19252f-eboot.bin.psp2dmp.tmp  psp2core-1772912463-0x00048b4421-eboot.bin.psp2dmp.tmp  psp2core-1773035332-0x0036bd36e1-eboot.bin.psp2dmp.tmp  psp2core-1773036439-0x0029af3555-eboot.bin.psp2dmp.tmp  psp2core-1773037358-0x0036cd3fe9-eboot.bin.psp2dmp.tmp  psp2core-1773219677-0x00010d3d8f-eboot.bin.psp2dmp.tmp  (+7 more)
.github/ISSUE_TEMPLATE/: multiplatform_smoke_test.md
.github/workflows/: build-multi-platform.yml  build-vpk.yml  cleanup-artifacts.yml  update-borealis.yml.txt  update-cacert.yml
Alpha-0.0.1/: README.md  README2.md  reademe.md
Beta-1.0.0/: README.md
api/: plex_api_reference.txt
app/platform/android/: gradle.properties
app/platform/android/app/: borealis.jks  build.gradle
app/platform/android/app/jni/: CMakeLists.txt
app/platform/android/app/src/main/: AndroidManifest.xml
app/platform/android/app/src/main/java/org/VitaPlex/app/: MpvSurface.java
app/platform/android/app/src/main/java/org/libsdl/app/: HIDDeviceManager.java  SDLActivity.java  SDLSurface.java  SDLSurface.java.txt
app/platform/android/app/src/main/res/drawable/: ic_repeat.xml  ic_repeat_on.xml  ic_repeat_one.xml  ic_shuffle.xml  ic_shuffle_on.xml
app/platform/android/app/src/main/res/values/: strings.xml
app/platform/ios/: Info.plist.in
app/platform/psv/bgapp/: CMakeLists.txt  bgapp.c  shellaudio.c  shellaudio.h  shellsvc_stub.S
app/platform/windows/: vitaplex.rc
docs/: android-direct-surface-playback.md  android-tv-mpv-comparison.md
include/: app.h
include/activity/: login_activity.hpp  main_activity.hpp  player_activity.hpp
include/app/: application.hpp  downloads_manager.hpp  hint_icons.hpp  music_controller.hpp  music_queue.hpp  plex_client.hpp  plex_palette.hpp  synclounge_client.hpp  synclounge_session.hpp
include/platform/: android_assets.hpp  android_mpv_surface.hpp  paths.hpp  platform.hpp  platform_dynamic.hpp
include/player/: mpv_player.h  mpv_player.hpp
include/utils/: async.hpp  http_cache.hpp  http_client.h  http_client.hpp  https_proxy.h  image_loader.hpp  jwt_auth.hpp  now_playing.hpp  pip.h
include/view/: debug_tab.hpp  downloads_tab.hpp  filter_chip.hpp  home_tab.hpp  home_user_picker.hpp  horizontal_scroll_row.hpp  library_section_tab.hpp  library_tab.hpp  livetv_tab.hpp  long_press_gesture.hpp  media_detail_view.hpp  media_item_cell.hpp  music_tab.hpp  overlay_dialog.hpp  progress_dialog.hpp  recycling_grid.hpp  search_tab.hpp  settings_tab.hpp  sidebar_editor.hpp  video_view.hpp
patches/: brls_application.cpp  brls_application.hpp  fontstash.h  glfw_input.cpp  glfw_platform.cpp  nanovg.c  psv_platform.cpp
resources/i18n/en-US/: main.json
resources/xml/activity/: login.xml  main.xml  player.xml  reader.xml
resources/xml/tabs/: extensions.xml  home.xml  library.xml  search.xml  settings.xml
resources/xml/view/: chapter_item.xml  manga_detail.xml  manga_item.xml  media_detail.xml  media_item.xml
scripts/android/: Makefile
scripts/vita-packages/: README.md  build-all.sh  setup.sh
scripts/vita-packages/curl/: VITABUILD
scripts/vita-packages/ffmpeg/: VITABUILD
scripts/vita-packages/mpv/: VITABUILD
scripts/vita-packages/vita-netdb/: CMakeLists.txt  VITABUILD  netdb.h  vita_netdb.c  vita_netdb.h
scripts/vita-packages/vita-netdb/sys/: mman.h
src/: app.cpp  main.cpp
src/activity/: login_activity.cpp  main_activity.cpp  player_activity.cpp
src/app/: application.cpp  downloads_manager.cpp  hint_icons.cpp  music_controller.cpp  music_queue.cpp  plex_client.cpp  synclounge_client.cpp  synclounge_session.cpp
src/platform/: android_assets.cpp  android_mpv_surface.cpp  platform_android.cpp  platform_common.cpp  platform_desktop.cpp  platform_ios.mm  platform_ps4.cpp  platform_psv.cpp  platform_switch.cpp
src/player/: mpv_player.cpp  mpv_player_android.cpp
src/utils/: http_cache.cpp  http_client.cpp  https_proxy.cpp  image_loader.cpp  jwt_auth.cpp  now_playing.cpp  now_playing_mpris.cpp  now_playing_smtc.cpp  pip.cpp  switch_stubs.c  vita_stubs.c
src/view/: debug_tab.cpp  downloads_tab.cpp  home_tab.cpp  horizontal_scroll_row.cpp  library_section_tab.cpp  library_tab.cpp  livetv_tab.cpp  long_press_gesture.cpp  media_detail_view.cpp  media_item_cell.cpp  music_tab.cpp  overlay_dialog.cpp  progress_dialog.cpp  recycling_grid.cpp  search_tab.cpp  settings_tab.cpp  sidebar_editor.cpp  video_view.cpp
vita-packages/: README.md  build-all.sh
vita-packages/curl/: VITABUILD
(+4 files in other folders)
